BENCHMARK_ARENA_SIZE is now optional. Data generator script now uses constexpr. Added USING_BUILTIN_MODEL. Updated README.

--- a/tensorflow/lite/micro/tools/benchmarking/Makefile.inc
+++ b/tensorflow/lite/micro/tools/benchmarking/Makefile.inc
@@ -5,8 +5,9 @@ ifneq ($(BENCHMARK_MODEL_PATH),)
     GENERIC_BENCHMARK_MODEL_NAME := $(notdir $(basename $(BENCHMARK_MODEL_PATH)))
     CXXFLAGS += -DMODEL_HEADER_PATH=\"$(GENERIC_BENCHMARK_MODEL_DIR)$(GENERIC_BENCHMARK_MODEL_NAME)_model_data.h\"
     CXXFLAGS += -DMODEL_NAME=$(GENERIC_BENCHMARK_MODEL_NAME)
-    BENCHMARK_ARENA_SIZE ?= $(shell expr 136 \* 1024)
+ifneq ($(BENCHMARK_ARENA_SIZE),)
     CXXFLAGS += -DTENSOR_ARENA_SIZE=$(BENCHMARK_ARENA_SIZE)
+endif
 
     GENERIC_BENCHMARK_GENERATOR_INPUTS := $(TENSORFLOW_ROOT)$(BENCHMARK_MODEL_PATH)
 
