--- a/.github/workflows/cortex_m.yml
+++ b/.github/workflows/cortex_m.yml
@@ -14,6 +14,11 @@ on:
   # Allow manually triggering of the workflow.
   workflow_dispatch: {}
 
+  pull_request_target:
+    types:
+      - closed
+      - labeled
+
 jobs:
   cortex_m_generic:
     runs-on: ubuntu-latest
