Add workflow_call to cortex_m.yml
This is to allow the cortex m workflow to be called from other
workflows.

BUG=cleanup

--- a/.github/workflows/cortex_m.yml
+++ b/.github/workflows/cortex_m.yml
@@ -18,6 +18,15 @@ on:
     types:
       - closed
       - labeled
+  
+  workflow_call:
+    inputs:
+      trigger-sha:
+        required: true
+        type: string
+    secrets:
+      tflm-bot-token:
+        required: true
 
 jobs:
   cortex_m_generic:
