Fix tests_entry & tests_post workflows
The tests_entry workflow was invalid due to parsing error when a `==`
was expected instead of `=`. The tests_post needed to remove the
ci:run_full label.

BUG=b/327686165

--- a/.github/workflows/tests_entry.yml
+++ b/.github/workflows/tests_entry.yml
@@ -31,7 +31,7 @@ jobs:
         if: github.event.action == 'labeled' &&
           !(github.event.label.name == 'ci:run' ||
             github.event.label.name == 'ci:ready_to_merge' ||
-            github.event.label.name = 'ci:run_full')
+            github.event.label.name == 'ci:run_full')
         run: exit 1
 
   ci-ready-to-merge:
@@ -81,7 +81,7 @@ jobs:
     steps:
       - name: remove-cirun-full
         if: github.event.action == 'labeled' &&
-            github.event.label.name = 'ci:run_full'
+            github.event.label.name == 'ci:run_full'
         uses: actions/github-script@v5
         with:
           github-token: ${{ secrets.TFLM_BOT_REPO_TOKEN }}
