Add meta-data to generic benchmark
@tensorflow/micro

Add meta-data strings to the binary.  Meta-data is output each time binary is executed.  See the README for a sample of the output.

bug=fixes #2495

--- a/tensorflow/lite/micro/tools/benchmarking/BUILD
+++ b/tensorflow/lite/micro/tools/benchmarking/BUILD
@@ -20,6 +20,8 @@ cc_library(
 cc_library(
     name = "generic_benchmark_lib",
     srcs = ["generic_model_benchmark.cc"],
+    hdrs = ["show_meta_data.h"],
+    defines = ["GENERIC_BENCHMARK_NO_META_DATA"],
     deps = [
         ":metrics",
         ":op_resolver",
