Add CMSIS-NN int8 and int16 batch matmul
 * Moves some common functions with ref to new header file
 * Creates new cmsis_nn batch_matmul.cc

Signed-off-by: Ryan O'Shea <ryan.oshea3@arm.com>
Co-authored-by: Adrian Lundell <adrian.lundell@arm.com>

Change-Id: I88de8284bb10abaebf7b649436c5375474e1d44d

--- a/tensorflow/lite/micro/kernels/BUILD
+++ b/tensorflow/lite/micro/kernels/BUILD
@@ -300,6 +300,7 @@ tflm_kernel_cc_library(
     hdrs = [
         "activations.h",
         "add.h",
+        "batch_matmul.h",
         "circular_buffer.h",
         "conv.h",
         "depthwise_conv.h",
