Add bazel build rules for streaming_conv

--- a/tensorflow/lite/micro/kernels/BUILD
+++ b/tensorflow/lite/micro/kernels/BUILD
@@ -282,6 +282,8 @@ tflm_kernel_cc_library(
         "split_v.cc",
         "squared_difference.cc",
         "squeeze.cc",
+        "streaming_conv.cc",
+        "streaming_conv_common.cc",
         "strided_slice.cc",
         "strided_slice_common.cc",
         "sub.cc",
@@ -321,6 +323,7 @@ tflm_kernel_cc_library(
         "reduce.h",
         "reshape.h",
         "softmax.h",
+        "streaming_conv.h",
         "strided_slice.h",
         "sub.h",
         "svdf.h",
