feat: add a tflite::hexdump() for printing raw memory
Add tflite::hexdump() for printing raw memory to output streams. Copy
the output format of Python's hexdump module.

--- a/tensorflow/lite/micro/BUILD
+++ b/tensorflow/lite/micro/BUILD
@@ -382,6 +382,20 @@ cc_library(
 )
 
 cc_library(
+    name = "hexdump",
+    srcs = [
+        "hexdump.cc",
+    ],
+    hdrs = [
+        "hexdump.h",
+    ],
+    deps = [
+        ":span",
+        ":static_vector",
+    ],
+)
+
+cc_library(
     name = "recording_allocators",
     srcs = [
         "recording_micro_allocator.cc",
@@ -552,6 +566,18 @@ cc_test(
     deps = [
         ":flatbuffer_utils",
         ":test_helpers",
+        "//tensorflow/lite/micro/testing:micro_test",
+    ],
+)
+
+cc_test(
+    name = "hexdump_test",
+    size = "small",
+    srcs = [
+        "hexdump_test.cc",
+    ],
+    deps = [
+        ":hexdump",
         "//tensorflow/lite/micro/testing:micro_test",
     ],
 )
