refactor: move tflite::Span to independent header
Hoist the universally useful tflite::Span out of
codegen/runtime/micro_codegen_context.h and into an independent header
usable from elsewhere in the project.

--- a/codegen/runtime/BUILD
+++ b/codegen/runtime/BUILD
@@ -14,5 +14,6 @@ cc_library(
         "//tensorflow/lite/micro:micro_context",
         "//tensorflow/lite/micro:micro_graph",
         "//tensorflow/lite/micro:micro_log",
+        "//tensorflow/lite/micro:span",
     ],
 )
