Fix upstream TF sync
The CI sync from the upstream TF has been failing for the last month due
to the relocation of certain TFLite files. In particular, some schema
files were relocated to tensorflow/compiler/mlir/lite subfolder. This PR
mirrors the migration and adds a few redirection headers to ensure
source compatibility for now.

This PR also includes a TF sync as well to get us caught up again. While
that could have been done separately, this is done together to ensure
everything continues to build with the relocations.

BUG=b/351824449

--- a/tensorflow/compiler/mlir/lite/schema/BUILD
+++ b/tensorflow/compiler/mlir/lite/schema/BUILD
@@ -7,17 +7,19 @@ package(
     licenses = ["notice"],
 )
 
-# Note: when wanting to generate the schema_generated.h, you must build as:
-# bazel build schema_fbs_srcs.
+exports_files(
+    srcs = ["schema.fbs"],
+)
+
 flatbuffer_cc_library(
     name = "schema_fbs",
-    srcs = ["//tensorflow/compiler/mlir/lite/schema:schema.fbs"],
+    srcs = ["schema.fbs"],
 )
 
 # Generic schema for inference on device (but with reflections makes bigger).
 flatbuffer_cc_library(
     name = "schema_fbs_with_reflection",
-    srcs = ["//tensorflow/compiler/mlir/lite/schema:schema.fbs"],
+    srcs = ["schema.fbs"],
     flatc_args = [
         "--reflect-types",
         "--reflect-names",
@@ -29,8 +31,11 @@ flatbuffer_cc_library(
 
 cc_library(
     name = "schema_utils",
+    srcs = ["schema_utils.cc"],
     hdrs = ["schema_utils.h"],
     deps = [
-        "//tensorflow/compiler/mlir/lite/schema:schema_utils",
+        ":schema_fbs",
+        "//tensorflow/compiler/mlir/lite/kernels/internal:compatibility_macros",
+        "@flatbuffers//:runtime_cc",
     ],
 )
