fix: replace forbidden assert() with TF_LITE_ASSERT()

--- a/tensorflow/lite/micro/BUILD
+++ b/tensorflow/lite/micro/BUILD
@@ -411,6 +411,9 @@ cc_library(
     name = "static_vector",
     hdrs = ["static_vector.h"],
     copts = micro_copts(),
+    deps = [
+        "//tensorflow/lite/kernels:op_macros",
+    ],
 )
 
 cc_library(
