Add py_library generate_test_for_model to tflite-micro package
This enables running bazel run
..:generate_micro_mutable_op_resolver_from_model_test
when tflite_micro is installed.

Change-Id: Ibde00cde016747bc437e50eca8a90aaeada45df0

--- a/python/tflite_micro/BUILD
+++ b/python/tflite_micro/BUILD
@@ -79,6 +79,7 @@ py_library(
     deps = [
         requirement("numpy"),
         "//tensorflow/lite/tools:flatbuffer_utils",
+        "//tensorflow/lite/micro/tools:generate_test_for_model",
     ],
 )
 
@@ -134,6 +135,7 @@ py_package(
         "python.tflite_micro",
         "tensorflow.lite.python",
         "tensorflow.lite.tools.flatbuffer_utils",
+        "tensorflow.lite.micro.tools.generate_test_for_model",
     ],
     deps = [
         ":postinstall_check",
