--- a/tensorflow/lite/micro/tools/BUILD
+++ b/tensorflow/lite/micro/tools/BUILD
@@ -32,6 +32,7 @@ py_library(
     name = "generate_test_for_model",
     srcs = ["generate_test_for_model.py"],
     srcs_version = "PY3",
+    visibility = ["//:__subpackages__"],
     deps = [
         "//tensorflow/lite/python:schema_py",
     ],
