Add py_library generate_test_for_model to tflite-micro package (#2667)
This enables running bazel run
..:generate_micro_mutable_op_resolver_from_model_test when tflite_micro is installed.

BUG=partially fixing https://github.com/tensorflow/tflite-micro/issues/2564

--- a/python/tflite_micro/BUILD
+++ b/python/tflite_micro/BUILD
@@ -78,6 +78,7 @@ py_library(
     visibility = ["//visibility:public"],
     deps = [
         requirement("numpy"),
+        "//tensorflow/lite/micro/tools:generate_test_for_model",
         "//tensorflow/lite/tools:flatbuffer_utils",
     ],
 )
@@ -132,6 +133,7 @@ py_package(
     # in the tflm tree.
     packages = [
         "python.tflite_micro",
+        "tensorflow.lite.micro.tools.generate_test_for_model",
         "tensorflow.lite.python",
         "tensorflow.lite.tools.flatbuffer_utils",
     ],
