Fix XTENSA compiler warnings. Add CONV2D and TRANSPOSE_CONV compression support for XTENSA. Hifimini and P6 support not implemented. Correctly compute the number of value table elements to quantize in kernel unit tests. Clarify code when setting value table stride in kernel unit tests.

--- a/tensorflow/lite/micro/tools/make/Makefile
+++ b/tensorflow/lite/micro/tools/make/Makefile
@@ -267,8 +267,8 @@ MICROLITE_LIB_NAME := libtensorflow-microlite.a
 # TFLM optional compression support (default disabled)
 ENABLE_COMPRESSION := no
 ifneq ($(USE_TFLM_COMPRESSION),)
-  # currently only Linux targets supported
-  ifeq ($(TARGET), $(filter $(TARGET), linux))
+  # currently only Linux (x86), Xtensa targets supported
+  ifeq ($(TARGET), $(filter $(TARGET), linux xtensa))
     CXXFLAGS += -DUSE_TFLM_COMPRESSION
     CCFLAGS += -DUSE_TFLM_COMPRESSION
     ENABLE_COMPRESSION := yes
