Fix upstream TF Sync
The CI sync from the upstream TF has been failing for the last month
due to the relocation of certain TFLite files. In particular, the
error_reporter sources were moved to the compiler subdirectory.

This PR also includes a full sync to get us caught up again.

BUG=b/369123029

--- a/tensorflow/lite/core/api/BUILD
+++ b/tensorflow/lite/core/api/BUILD
@@ -35,11 +35,15 @@ cc_library(
 # dependencies without pulling in tensor_utils and flatbuffer_conversions.
 cc_library(
     name = "error_reporter",
-    srcs = ["error_reporter.cc"],
-    hdrs = ["error_reporter.h"],
+    hdrs = [
+        "error_reporter.h",
+        "//tensorflow/compiler/mlir/lite/core/api:error_reporter.h",
+    ],
     copts = tflite_copts() + micro_copts(),
     visibility = [
         "//visibility:public",
     ],
-    deps = [],
+    deps = [
+        "//tensorflow/compiler/mlir/lite/core/api:error_reporter",
+    ],
 )
