CMSIS-NN Min Max int8 support
  * Moves common functions to new maximum_minimum.h
  * Creates cmsis-nn/maximum_minimum.cc

Change-Id: Ifbb3fedf53043b2f8d4c48d73c2ca44c7f0f87ca
Signed-off-by: Ryan O'Shea <ryan.oshea3@arm.com>

--- a/tensorflow/lite/micro/kernels/BUILD
+++ b/tensorflow/lite/micro/kernels/BUILD
@@ -313,6 +313,7 @@ tflm_kernel_cc_library(
         "logistic.h",
         "lstm_eval.h",
         "lstm_shared.h",
+        "maximum_minimum.h",
         "micro_ops.h",
         "mul.h",
         "pad.h",
