--- a/tensorflow/lite/micro/tools/BUILD
+++ b/tensorflow/lite/micro/tools/BUILD
@@ -34,6 +34,7 @@ py_library(
     srcs_version = "PY3",
     visibility = ["//:__subpackages__"],
     deps = [
+        requirement("ai-edge-litert"),
         "//tensorflow/lite/python:schema_py",
     ],
 )
@@ -208,6 +209,7 @@ py_binary(
         ":model_transforms_utils",
         "@absl_py//absl:app",
         "@absl_py//absl/flags",
+        requirement("ai-edge-litert"),
         requirement("tensorflow"),
         "//python/tflite_micro:runtime",
         "//tensorflow/lite/tools:flatbuffer_utils",
