Cleanup header file usage. Add decompression code to Bazel BUILD files

--- a/tensorflow/lite/micro/BUILD
+++ b/tensorflow/lite/micro/BUILD
@@ -29,6 +29,16 @@ tflm_cc_library(
 )
 
 tflm_cc_library(
+    name = "compression",
+    hdrs = [
+        "compression.h",
+    ],
+    deps = [
+        "//tensorflow/lite/c:common",
+    ],
+)
+
+tflm_cc_library(
     # TODO(b/187093492): Rename to micro_interpreter.
     name = "micro_framework",
     srcs = [
@@ -63,12 +73,14 @@ tflm_cc_library(
         "micro_context.h",
     ],
     deps = [
+        ":compression",
         ":micro_common",
         ":micro_graph",
         ":micro_log",
         ":micro_profiler",
         "//tensorflow/lite/c:common",
         "//tensorflow/lite:type_to_tflitetype",
+        "//tensorflow/lite/micro/kernels:decompress",
     ],
 )
 
@@ -165,7 +177,6 @@ tflm_cc_library(
 tflm_cc_library(
     name = "micro_allocator",
     srcs = [
-        "compression.h",
         "micro_allocation_info.cc",
         "micro_allocator.cc",
     ],
@@ -174,6 +185,7 @@ tflm_cc_library(
         "micro_allocator.h",
     ],
     deps = [
+        ":compression",
         ":flatbuffer_utils",
         ":memory_helpers",
         ":micro_arena_constants",
@@ -240,7 +252,9 @@ tflm_cc_library(
         "test_helpers.h",
     ],
     deps = [
+        ":compression",
         ":memory_helpers",
+        ":micro_log",
         ":micro_utils",
         ":op_resolvers",
         "//tensorflow/lite:type_to_tflitetype",
