refactor: base unit test on tf.test

--- a/tensorflow/lite/micro/compression/BUILD
+++ b/tensorflow/lite/micro/compression/BUILD
@@ -93,5 +93,6 @@ py_test(
         "metadata_py",
         "@flatbuffers//:runtime_py",
         requirement("hexdump"),
+        requirement("tensorflow"),
     ],
 )
