feat(compression): add module for defining test .tflite models
Add a module that provides tools for constructing .tflite
flatbuffers from a Python dictionary representation of a model.
This is useful for declaratively defining model flatbuffers for
testing, which is faster and clearer than building up model
flatbuffers programmatically.

The implementation should stay low-level and independent from any
helpers in this project which make constructing model and
flatbuffers easier, because this module is used to define tests
for those helpers.

BUG=#2636

--- a/tensorflow/lite/micro/compression/BUILD
+++ b/tensorflow/lite/micro/compression/BUILD
@@ -114,3 +114,24 @@ py_test(
         requirement("tensorflow"),
     ],
 )
+
+py_library(
+    name = "test_models",
+    srcs = ["test_models.py"],
+    deps = [
+        "//tensorflow/lite/python:schema_py",
+        requirement("flatbuffers"),
+        requirement("numpy"),
+    ],
+)
+
+py_test(
+    name = "test_models_test",
+    size = "small",
+    srcs = ["test_models_test.py"],
+    deps = [
+        ":test_models",
+        "//tensorflow/lite/python:schema_py",
+        requirement("tensorflow"),
+    ],
+)
