feat(compression): add facade for working with tflite.Model
Add a module that provides convenient navigation, data type
conversions, and utilities for working with a tflite.Model, which
can be tedious and verbose to work with directly.

BUG=#2636

--- a/tensorflow/lite/micro/compression/BUILD
+++ b/tensorflow/lite/micro/compression/BUILD
@@ -98,6 +98,26 @@ py_test(
 )
 
 py_library(
+    name = "model_facade",
+    srcs = ["model_facade.py"],
+    deps = [
+        "//tensorflow/lite/python:schema_py",
+        requirement("flatbuffers"),
+    ],
+)
+
+py_test(
+    name = "model_facade_test",
+    size = "small",
+    srcs = ["model_facade_test.py"],
+    deps = [
+        ":model_facade",
+        ":test_models",
+        requirement("tensorflow"),
+    ],
+)
+
+py_library(
     name = "spec",
     srcs = ["spec.py"],
     deps = [
